2003-06-11  Sebastien Pouliot <spouliot@motus.com>

	* DSAManaged.cs: Refactored from DSACryptoServiceProvider.cs. Cannot
	be reused outside [ms]corlib because DSA constructor is internal :-(

	* PKCS1.cs: Now support any hash algorithm when encoding PKCS 1.5
	(i.e. not limited to pre-calculated values for known hashes). Some
	other API changes to ease the use of other hash algorithms.

	* RSAManaged.cs: Refactored from RSACryptoServiceProvider.cs. This 
	class is required for custom PKCS#1 padding in SSL (which is not 
	possible using RSACryptoServiceProvider).

2003-05-12  Sebastien Pouliot  <spouliot@videotron.ca>

	* PKCS1.cs: Corrected I2OSP to match PKCS#1 v.2.1 test vector
	and fix the OAEP incompatibility issue.

2003-04-01  Sebastien Pouliot  <spouliot@videotron.ca>

	* PKCS1.cs: Corrected fix (partially) for the lame PKCS1 v1.5
	signatures done without specifying an OID.
	
2003-03-01  Sebastien Pouliot  <spouliot@videotron.ca>

	* PKCS1.cs: Fix for some (lame) PKCS1 v1.5 signatures done
	without specifying an OID.

2003-02-08  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoTools.cs: Renamed namespace to match new location.
	* PKCS1.cs: Renamed namespace to match new location.
	* HMACAlgorithm.cs: New. Generic class to implement HMAC
	using any hash algorithm (was in S.S.C.HMACSHA1.cs).
	* MACAlgorithm.cs: New. Generic class to implement MAC
	using any symmetric algorithm (was in S.S.C.MACTripleDES.cs).
